# MagnoFallas

./: .gitignore  README.md  environment.yml  pyproject.toml
Src/MagnoFallas/: __init__.py
Src/MagnoFallas/Boltzmann/.ipynb_checkpoints/: __init__-checkpoint.py
Src/MagnoFallas/Boltzmann/process2M1Ph/: ScatteringList2M1Ph.py  stat2M1Ph.py
Src/MagnoFallas/Boltzmann/process4M/: ScatteringList4M.py  boltzman4M.py  kinetics4M.py
Src/MagnoFallas/Interface/: PseudoRad.py
Src/MagnoFallas/Interface/.ipynb_checkpoints/: MuMax3-checkpoint.py  PseudoRad-checkpoint.py  TB2J-checkpoint.py  UtilPhonopy-checkpoint.py
Src/MagnoFallas/Math/: Dipole_Integrations_3D_deriv.py  SurfaceMath.py  generalMath.py
Src/MagnoFallas/OldRadtools/: __init__.py  _license.py  _osfix.py  exceptions.py  geometry.py  numerical.py
Src/MagnoFallas/SHtools/: __init__.py  graphics.py  tools.py  unfold.py
Src/MagnoFallas/SpinPhonon/: SPhUtil.py  StrategyDipDip.py  StrategyRotation.py  __init__.py
Src/MagnoFallas/Utils/: DipoleDipole.py  Grids.py  GroundState.py  __init__.py  util2.py
TutorialData/CrPS4/: exchange.out
TutorialData/CrSBr/: FORCE_SETS  phonopy_disp.yaml
Tutorials/: T1_Hamiltonian_Tools_CrPS4.ipynb  T1_Hamiltonian_Tools_CrPS4.py  T2_Toy_models_Dipole-dipole.ipynb  T2_Toy_models_Dipole-dipole.py  T3-a_magnon-phonon_CrSBr-version2.ipynb  T3-a_magnon-phonon_CrSBr-version2.py  T3_magnon-phonon_CrSBr.ipynb  T3_magnon-phonon_CrSBr.py  T4_magnon-magnon_model.ipynb  T4_magnon-magnon_model.py  T4a_magnon-magnon_CrSBr.ipynb  T4a_magnon-magnon_CrSBr.py
(+119 files in other folders)
